--- a/css/animation.css
+++ b/css/animation.css
@@ -1,22 +1,18 @@
 @keyframes menuMobileToLeft {
   from {
-    transform: translateX(30%);
-    opacity: 0;
+    transform: translateX(100%);
   }
   to {
     transform: translateX(0);
-    opacity: 1;
   }
 }
 
 @keyframes menuMobileToRight {
   from {
     transform: translateX(0);
-    opacity: 1;
   }
   to {
     transform: translateX(100%);
-    opacity: 0;
   }
 }
 
@@ -125,11 +121,11 @@
 }
 
 .menuMobileToLeft {
-  animation: menuMobileToLeft 0.5s ease-in-out;
+  animation: menuMobileToLeft 0.8s ease;
 }
 
 .menuMobileToRight {
-  animation: menuMobileToRight 0.5s ease-in-out;
+  animation: menuMobileToRight 0.8s ease;
 }
 
 .marqueeStyle {
