--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,9 @@
 }
 
 .slick-dots {
-  padding: 0;
   position: absolute;
+  bottom: 10px;
+  left: 10px;
 }
 
 .slick-dots li {
@@ -62,8 +63,8 @@
 
 .wrap-btn-direction {
   position: absolute;
-  left: 0;
-  right: 0;
+  left: 5px;
+  right: 2px;
   top: 50%;
   transform: translateY(-50%);
   display: flex;
