--- a/css/styles.css
+++ b/css/styles.css
@@ -117,3 +117,89 @@
     height: 0;
   }
 }
+
+/* IFRAME */
+#popup {
+  background-color: rgb(25, 25, 25);
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: 500ms all;
+  -webkit-transition: 500ms all;
+  -moz-transition: 500ms all;
+  -ms-transition: 500ms all;
+  -o-transition: 500ms all;
+}
+#popup:target {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup {
+  width: 75%;
+  height: 600px;
+  overflow: hidden;
+  transform: scale(0.6);
+  -webkit-transform: scale(0.6);
+  -moz-transform: scale(0.6);
+  -ms-transform: scale(0.6);
+  -o-transform: scale(0.6);
+  transition: 500ms all;
+  -webkit-transition: 500ms all;
+  -moz-transition: 500ms all;
+  -ms-transition: 500ms all;
+  -o-transition: 500ms all;
+  position: relative;
+}
+.popup-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#popup:target .popup {
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
+
+.popup-close {
+  position: absolute;
+  color: #000;
+  left: 50%;
+  top: 10%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+.popup-close i {
+  color: #fff;
+  font-size: 50px;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+.popup-close a i:hover {
+  color: white;
+  font-size: 70px;
+}
+
+/* TAB BUTTON DEAL HOT */
+.active {
+  background-color: white !important;
+  color: #16a34a !important;
+}
